--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,105 +1,45 @@
-body {
-    margin: 50px;
+.out {
+    display: flex;
+    flex-direction: column;
+    max-width: 720px;
 }
 
-.keyboard {
-    width: 810px; 
-    height: 280px;
-    background: thistle;
-    border: 2px solid  #708090;
-    margin-bottom: 40px;
-}
-
-.num-line {
-    display: grid;
-    grid-template-columns: repeat(13, 50px) 150px;
-    grid-auto-rows: 50px;  
-    grid-auto-columns: auto;  
-}
-
-.first-second-line {
-    display: grid; 
-    grid-template-columns: 13fr 2fr;
-}
-
-.first-second-key-line {
-    display: grid;
-    grid-template-columns: 100px repeat(12, 50px) ;
-    grid-auto-rows: 50px;
-    grid-auto-columns: auto; 
-}
-
-.trid-key-line {
-    display: grid;
-    grid-template-columns: 100px repeat(11, 50px) 150px;
-    grid-auto-rows: 50px;
-    grid-auto-columns: auto; 
-}
-
-.fourth-line {
-    display: grid;
-    grid-template-columns: 6fr 2.7fr;
-}
-
-.command-keys {
-    display: grid;
-    grid-template-columns: repeat(3, 60px) 340px repeat(2, 50px);
-    grid-auto-rows: 50px;
-    grid-auto-columns: auto; 
-}
-
-.arrows {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-auto-rows: 25px; 
-    grid-auto-columns: auto;
-    text-align: center;
+.line {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;   
 }
 
 .key {
-    padding: 3px;
-    height: 44px;
-    border-radius: 10%;
-    background: seashell;
-    margin: 3px;
-    border: 2px solid slategrey;   
-    color:  slategrey; 
+    padding: 10px;
+    border: 1px solid black;
+    margin: 2px;
 }
 
-.key-left {
-    grid-area: 2 / 2;
+.spase {
+    padding: 20px;
+    width: 300px;
 }
 
-.key-up {
-    grid-area: 1 / 3;
-}
-
-.key-down {
-    grid-area: 2 / 3;
-    padding: 4px;
-}
-
-.key-right {
-    grid-area: 2 / 4;
-}
-
-.arrow {
-    height: 30px;
-    margin: 3px;
-}
-
-.key-enter {
-    width: 100px;
-    height: 95px; 
-    margin-left: 0;
+.key:hover {
+    background-color: rgba(124, 160, 167, 0.4);
 }
 
 .key-active {
-    background: darksalmon;
-    border: 2px solid black; 
-    color: #444;
+    background-color: rgba(89, 233, 173, 0.4);
 }
 
 .inp {
-    margin-top: 100px;
+    margin: 10px calc(360px - 104px);  
+    height: 50px;
+    border-radius: 5px;
+    background-color: #ffffff;
+    padding: 0 20px;
+    color: #4b4b4b;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.inp:focus {
+    outline: none;
 }
